--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,71 @@
+anyio==4.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
 black==24.4.2
+bleach==6.1.0
+certifi==2024.6.2
+cffi==1.16.0
 click==8.1.7
+coloredlogs==15.0.1
+comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+executing==2.0.1
+fastjsonschema==2.19.1
 filelock==3.14.0
 fonttools==4.53.0
+fqdn==1.5.1
 fsspec==2024.6.0
+gensim==4.3.2
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+h11==0.14.0
+humanfriendly==10.0
+idna==3.7
+ipykernel==6.29.4
+ipython==8.25.0
+ipython-genutils==0.2.0
+isoduration==20.11.0
 isort==5.13.2
+jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupynium==0.2.2
+jupyter-events==0.10.0
+jupyter_client==7.4.9
+jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab_pygments==0.3.0
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.9.0
+matplotlib-inline==0.1.7
+mistune==3.0.2
 mpmath==1.3.0
+msgpack==1.0.8
 mypy-extensions==1.0.0
+nbclassic==1.1.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.8.1
+notebook==6.5.7
+notebook_shim==0.2.4
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -28,18 +79,66 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.1.105
+outcome==1.3.0.post0
+overrides==7.7.0
 packaging==24.0
 pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
 pathspec==0.12.1
+persist-queue==0.8.1
+pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
+prometheus_client==0.20.0
+prompt_toolkit==3.0.46
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.22
+Pygments==2.18.0
+pynvim==0.5.0
 pyparsing==3.1.2
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
 pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
 regex==2024.5.15
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.1
+scipy==1.12.0
+selenium==4.21.0
+Send2Trash==1.8.3
+setuptools==70.0.0
 six==1.16.0
+smart-open==7.0.4
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+stack-data==0.6.3
 sympy==1.12.1
+terminado==0.18.1
+tinycss2==1.3.0
 torch==2.3.0
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
+trio==0.25.1
+trio-websocket==0.11.1
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.1
 tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.1
+verboselogs==1.7
+wcwidth==0.2.13
+webcolors==24.6.0
+webencodings==0.5.1
+websocket-client==1.8.0
+wrapt==1.16.0
+wsproto==1.2.0
