--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ black==24.4.2
 bleach==6.1.0
 certifi==2024.6.2
 cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
 coloredlogs==15.0.1
 comm==0.2.2
@@ -29,6 +30,7 @@ gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.0.3
 h11==0.14.0
+huggingface-hub==0.24.6
 humanfriendly==10.0
 idna==3.7
 ipykernel==6.29.4
@@ -107,9 +109,12 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
 regex==2024.5.15
+requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.1
+safetensors==0.4.4
+scikit-learn==1.5.1
 scipy==1.12.0
 selenium==4.21.0
 Send2Trash==1.8.3
@@ -123,11 +128,14 @@ soupsieve==2.5
 stack-data==0.6.3
 sympy==1.12.1
 terminado==0.18.1
+threadpoolctl==3.5.0
 tinycss2==1.3.0
+tokenizers==0.19.1
 torch==2.3.0
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
+transformers==4.44.2
 trio==0.25.1
 trio-websocket==0.11.1
 types-python-dateutil==2.9.0.20240316
